# paper-pilot

./: .gitattributes  .gitignore  LICENSE  README.ko.md  README.md  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
bridge/: .gitkeep
docs/: README.ko.md
retrieval-adapter/: paperqa_sparse_retrieve.py
scripts/: import_mlml_publications.py
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: FormattedAiText.tsx  LibraryViews.tsx  ReaderChrome.tsx  TopToolbar.tsx  icons.tsx
src/components/panels/: AssistantPanel.tsx  FloatingAiCard.tsx  LinkPreviewModal.tsx  ReaderPanels.tsx
src/components/reader/: PdfPageView.tsx  ReaderWorkspace.tsx  SelectionToolbarView.tsx  TranslationSidecar.tsx
src/hooks/: useActiveDocumentData.ts  useAppStartup.ts  useBridgeResults.ts  useDocumentActions.ts  useLibraryController.ts  usePagePersistence.ts  useReaderAutomation.ts  useReaderLayout.ts  useReaderSelection.ts  useReaderViewportSync.ts  useWordMeaningController.ts
src/lib/: ai.ts  aiPreferences.ts  aiPrompt.ts  aiResults.ts  annotationHelpers.ts  appState.ts  autoHighlights.ts  citations.ts  documentSettings.ts  fileActions.ts  highlights.ts  ids.ts  libraryTree.ts  linkPreviews.ts  outlines.ts  pdfDocument.ts  pdfShare.ts  pdfText.ts  rag.ts  readerDerived.ts  readerSettings.ts  readingStatus.ts  scholarly.ts  tauri.ts  textUtils.ts  tokenEstimate.ts  translations.ts  uiStrings.ts  wordMeanings.ts
src/types/: sbd.d.ts
(+5 files in other folders)
