[package]
name = "paper-pilot"
version = "0.1.0"
description = "Personal AI PDF reader"
authors = ["Paper Pilot"]
edition = "2021"

[lib]
name = "paperdock_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"
